--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -26,12 +26,12 @@
             <a class="nav-link" href="/about">About</a>
           </li>
 
-          <% if (title == "Products") { %>
+          <% if (title == "Projects") { %>
           <li class="nav-item active">
            <% } else {%>
           <li class="nav-item">
            <% } %> 
-            <a class="nav-link" href="/products">Products</a>
+            <a class="nav-link" href="/projects">Projects</a>
           </li>
 
           <% if (title == "Services") { %>
