--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,11 @@
 .nav-link{
-    font-size: 15pt;
+    font-size: 12pt;
   }
   body {  
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
-    background-color: azure;
-    background-image: radial-gradient( circle closest-side,white,azure);
+    background-color: rgb(255, 254, 254);
+    background-image: radial-gradient( circle closest-side,rgb(252, 251, 251),azure);
     padding-bottom: 50px;
   
   }
@@ -18,13 +18,20 @@
     text-transform: uppercase;
     border: none;
     background-color: #333;
-    color:#fff;
+    color:#fcfbfb;
     cursor:pointer;
   }
   
   .container{
-    background-color: antiquewhite;
-    padding:30px;  
+    background-color: rgb(254, 255, 255);
+    padding: 10px; 
+  }
+  .container-fluid{
+    background-color: #f7ecf0; 
+  }
+  .container-1{
+    background-color: #f7ecf0;
+    padding: 10px; 
   }
   
   #homeContent{
@@ -100,17 +107,17 @@
   }
   
   input[type=reset]{
-    background-color: lightblue;   
+    
     margin-top: 10px; 
     padding-top:10px;
     padding-bottom:10px;
     padding-right:20px;
     padding-left:20px;
-    box-shadow: 10px white;
+    
   }
   input[type=reset]:hover{
     background-color: black;
-    color:white;
+    ;
   }
   
   #country{
@@ -123,8 +130,8 @@
     padding:5px; 
   }
   fieldset{
-    background-color: grey;
-    box-shadow: 5px 10px 18px black;
+     
+    
     width: 70%;
     margin-left:220px; 
     margin-bottom: 40px;
@@ -142,17 +149,18 @@
     padding-left: 40px;
   }
 
- 
-   
-    
-  
-  
   footer h6{
    
     position: absolute;
     left: 40%;
   }
-  
+  .contact-col{
+    background-color: rgb(215, 220, 220);
+  }
+  .row{
+    background-color: rgb(230, 240, 250);
+    padding: 10px;
+  }
   
   
   
