--- a/server/views/book/list.ejs
+++ b/server/views/book/list.ejs
@@ -15,7 +15,7 @@
 
             <% if(typeof displayName == 'string' && displayName) { %>
                 <a href="/book-list/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Add a Contact</a>
+                <i class="fas fa-plus-circle"></i> Add a Book</a>
             <% } %><br>
             <br>
             <table class="table table-bordered table-striped table-hover">
@@ -23,15 +23,19 @@
                
                 <tr>
                     <% if(typeof displayName == 'string' && displayName) { %>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Phone number</th>
-                        <th class="text-center">Email address</th>
+                        <th class="text-center">Title</th>
+                        <th class="text-center">Author</th>
+                        <th class="text-center">Year</th>
+                        <th class="text-center col-3">Description</th>
+                        <th class="text-center">Price</th>
                         <th></th>
                         <th></th>
                     <% } else { %>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Phone number</th>
-                        <th class="text-center">Email address</th>
+                        <th class="text-center">Title</th>
+                        <th class="text-center">Author</th>
+                        <th class="text-center">Year</th>
+                        <th class="text-center col-3">Description</th>
+                        <th class="text-center">Price</th>
                         
                     <% } %>
                 </tr>
@@ -42,8 +46,10 @@
                     <tr>
                         <% if(typeof displayName == "string" && displayName) { %>
                            <td class="text-center"><%= BookList[count].name %></td>
-                           <td class="text-center"><%= BookList[count].number %></td>
-                           <td class="text-center"><%= BookList[count].emailaddress %></td>
+                           <td class="text-center"><%= BookList[count].author %></td>
+                           <td class="text-center"><%= BookList[count].published %></td>
+                           <td class="col-3"><%= BookList[count].description %></td>
+                           <td class="text-center"><%= BookList[count].price %></td>
                            <td class="text-center">
                             <a href="/book-list/edit/<%= BookList[count]._id %>" class="btn btn-primary"> <i class="fa"></i>Edit</a>
                           </td>
@@ -51,9 +57,11 @@
                             <a href="/book-list/delete/<%= BookList[count]._id %>" class="btn btn-warning btn-sm"> <i class="fa"></i>Delete</a>
                           </td>
                          <% } else { %>
-                           <td class="text-center"><%= BookList[count].name %></td>
-                           <td class="text-center"><%= BookList[count].number %></td>
-                           <td class="text-center"><%= BookList[count].emailaddress %></td>
+                            <td class="text-center"><%= BookList[count].name %></td>
+                            <td class="text-center"><%= BookList[count].author %></td>
+                            <td class="text-center"><%= BookList[count].published %></td>
+                            <td class="col-3"><%= BookList[count].description %></td>
+                            <td class="text-center"><%= BookList[count].price %></td>
                          <% } %>
                        </tr>
                 <% } %>
