--- a/server/views/book/add.ejs
+++ b/server/views/book/add.ejs
@@ -11,29 +11,50 @@
 
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Contact Name</label>
+                    <label for="nameTextField">Book Title</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
-                    placeholder="Enter the Name"
-                    name="name" required>
+                    placeholder="Enter the Book Title"
+                    name="name" 
+                    required>
                 </div>
-
+    
                 <div class="form-group">
-                    <label for="numberTextField">Phone Number</label>
+                    <label for="priceTextField">Author</label>
+                    <input type="text" class="form-control"
+                    id="emailaddressTextField"
+                    placeholder="Enter the Book's Title"
+                    name="author" 
+                    required>
+                </div>
+    
+                <div class="form-group">
+                    <label for="authorTextField">Year</label>
                     <input type="text" class="form-control"
                     id="numberTextField"
-                    placeholder="Enter the phone number"
-                    name="number" required>
+                    placeholder="Enter the Year of Published"
+                    name="published" 
+                    required>
                 </div>
-
+    
                 <div class="form-group">
-                    <label for="emailTextField">Email Address</label>
-                    <input type="text" class="form-control"
-                    id="emailTextField"
-                    placeholder="Enter the email address"
-                    name="emailaddress" required>
+                    <label for="authorTextField">Description</label>
+                    <textarea type="text" class="form-control" 
+                    id="numberTextField"
+                    placeholder="Enter a breif description of the book"
+                    name="description" 
+                    required></textarea>
                 </div>
-               
+    
+                <div class="form-group">
+                    <label for="authorTextField">Price</label>
+                    <input type="text" class="form-control"
+                    id="numberTextField"
+                    placeholder="Enter the book's price"
+                    name="price" 
+                    required>
+                </div>
+                <br><br>
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
