--- a/server/views/book/edit.ejs
+++ b/server/views/book/edit.ejs
@@ -10,35 +10,56 @@
 
         <form class="form" method="POST">
              <div class="form-group">
-                <label for="nameTextField">Name</label>
+                <label for="nameTextField">Book Title</label>
                 <input type="text" class="form-control"
                 id="nameTextField"
-                placeholder="Enter the contact name"
+                placeholder="Enter the Book Title"
                 name="name" 
                 value="<%= book.name %>"
                 required>
             </div>
 
             <div class="form-group">
-                <label for="authorTextField">Number</label>
+                <label for="priceTextField">Author</label>
                 <input type="text" class="form-control"
-                id="numberTextField"
-                placeholder="Enter the contact number"
-                name="number" 
-                value="<%= book.number %>"
+                id="emailaddressTextField"
+                placeholder="Enter the Book's Title"
+                name="author" 
+                value="<%= book.author %>"
                 required>
             </div>
 
             <div class="form-group">
-                <label for="priceTextField">Email</label>
+                <label for="authorTextField">Year</label>
                 <input type="text" class="form-control"
-                id="emailaddressTextField"
-                placeholder="Enter the Email Address"
-                name="emailaddress" 
-                value="<%= book.emailaddress %>"
+                id="numberTextField"
+                placeholder="Enter the Year of Published"
+                name="published" 
+                value="<%= book.published %>"
                 required>
             </div>
-            
+
+            <div class="form-group">
+                <label for="authorTextField">Description</label>
+                <textarea type="text" class="form-control" 
+                id="numberTextField"
+                placeholder="Enter a breif description of the book"
+                name="description" 
+                value="<%= book.Description %>"
+                required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="authorTextField">Price</label>
+                <input type="text" class="form-control"
+                id="numberTextField"
+                placeholder="Enter the book's price"
+                name="price" 
+                value="<%= book.price %>"
+                required>
+            </div>
+            <br><br>
+
             <button class="btn btn-primary" type="submit">
                 <i class="fas fa-edit"></i> Submit</button>
             
